5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1662_2973.log
== TEST (2019-04-15 14:12:03) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= pl+(vl*t)
if(S>=100):
	print("ACIMA")
else:
	print("OK")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S= pl+(vl*t)
NameError: name 'pl' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:12:39) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:12:48) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.171116
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:13:26) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(S)
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202.0
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:13:50) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:13:59) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.120439
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:14:15) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:15:08) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.184179
-- ERROR:
  File "/home/codebench/codes/1662/2973/main.py", line 7
    print(int(S))print("ACIMA")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:15:10) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.14469
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:15:16) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.146532
-- ERROR:
  File "/home/codebench/codes/1662/2973/main.py", line 9
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:15:18) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.120396
-- ERROR:
  File "/home/codebench/codes/1662/2973/main.py", line 7
    print(int(S))print("ACIMA")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:15:20) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
print(int(S))print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.111865
-- ERROR:
  File "/home/codebench/codes/1662/2973/main.py", line 7
    print(int(S))print("ACIMA")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:15:21) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
print(int(S))print("ACIMA")
else:
	print("OK")
-- ERROR:
File "XXXX", line 7
    print(int(S))print("ACIMA")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:15:28) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.211663
-- ERROR:
  File "/home/codebench/codes/1662/2973/main.py", line 7
    print(int(S))print("ACIMA")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:15:41) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.150528
-- ERROR:
  File "/home/codebench/codes/1662/2973/main.py", line 9
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:15:42) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
print("ACIMA")
else:
	print("OK")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:15:57) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
print("ACIMA")
else:
	print("OK")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:41) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
print("ACIMA")

else:
	print("OK")
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:17:25) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
print("ACIMA")
if(S<100):
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:17:45) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
print("ACIMA")
if(S<100):
	print("OK")
-- EXECUTION TIME:
0.146618
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:18:06) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
if(S<100):
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:18:27) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
if(S<100):
	print("OK")
-- EXECUTION TIME:
0.164059
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:18:41) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else(S<100):
	print("OK")
-- ERROR:
File "XXXX", line 9
    else(S<100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:18:47) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:18:55) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.192545
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:19:06) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S)
			"ACIMA")
else:
	print("OK")
-- ERROR:
File "XXXX", line 8
    "ACIMA")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:19:17) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S)"ACIMA")
else:
	print("OK")
-- ERROR:
File "XXXX", line 7
    print(int(S)"ACIMA")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:19:47) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S)"ACIMA")
else:
	print("OK")
-- ERROR:
File "XXXX", line 7
    print(int(S)"ACIMA")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:20:09) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S)
	print("ACIMA")
else:
	print("OK")
-- ERROR:
File "XXXX", line 8
    print("ACIMA")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:20:19) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S)
			print("ACIMA")
else:
	print("OK")
-- ERROR:
File "XXXX", line 8
    print("ACIMA")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:20:30) 
-- CODE:
p1=float(input("posicao inicial:"))
vl=float(input("velocidade:"))
t=float(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:21:18) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:21:19) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.134472
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:21:20) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:21:29) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.161358
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:21:56) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("'ACIMA'")
else:
	print("'OK'")
-- EXECUTION TIME:
0.139768
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
'ACIMA'
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
'ACIMA'
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
'ACIMA'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:22:14) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("´ACIMA´")
else:
	print("´OK´")
-- EXECUTION TIME:
0.167708
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2973/main.py", line 8, in <module>
    print("\xb4ACIMA\xb4")
UnicodeEncodeError: 'ascii' codec can't encode character '\xb4' in position 0: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:15) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("´ACIMA´")
else:
	print("´OK´")
-- OUTPUT:
7202
´ACIMA´
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:18) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:23:27) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.153453
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:37) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:26:18) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
if(S>=100):
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.161361
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:26:19) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
if(S>=100):
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:26:37) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>100):
	print(int(S))
if(S>100):
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:26:45) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>100):
	print(int(S))
if(S>100):
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.202253
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:27:16) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>100):
	print(int(S))
if(S>100):
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.174686
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:27:17) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>100):
	print(int(S))
if(S>100):
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:28:28) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
if(S>=100):
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.224922
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:29) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(int(S))
if(S>=100):
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:32:03) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	FINAL= "S"
	print(S)
if(S>=100):
	resposta= "ACIMA"
	print(resposta)
else:
	print("OK")
-- EXECUTION TIME:
0.133783
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:04) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	FINAL= "S"
	print(S)
if(S>=100):
	resposta= "ACIMA"
	print(resposta)
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:33:16) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	FINAL= "S"
	print(FINAL)
if(S>=100):
	Resposta="ACIMA"
	print(Resposta)
else:
	print("OK")
-- EXECUTION TIME:
0.135564
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
S
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
S
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
S
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:33:16) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	FINAL= "S"
	print(FINAL)
if(S>=100):
	Resposta="ACIMA"
	print(Resposta)
else:
	print("OK")
-- OUTPUT:
S
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:33:29) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	FINAL=S
	print(FINAL)
if(S>=100):
	Resposta="ACIMA"
	print(Resposta)
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:33:37) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	FINAL=S
	print(FINAL)
if(S>=100):
	Resposta="ACIMA"
	print(Resposta)
else:
	print("OK")
-- EXECUTION TIME:
0.196114
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:33:58) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	FINAL=S
	print(FINAL)
if(S>=100):
	Resposta="ACIMA"
	print(Resposta)
else:
	print("OK")
-- EXECUTION TIME:
0.157437
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:33:59) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	FINAL=S
	print(FINAL)
if(S>=100):
	Resposta="ACIMA"
	print(Resposta)
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:34:00) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	FINAL=S
	print(FINAL)
if(S>=100):
	Resposta="ACIMA"
	print(Resposta)
else:
	print("OK")
-- EXECUTION TIME:
0.158643
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:35:29) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	FINAL=S
	print(FINAL)
if(S>=100):
	Resposta="ACIMA"
	print(Resposta)
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:36:37) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(s)
	print("ACIMA")
else:
	print("OK")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(s)
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:37:06) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(S)
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:37:17) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(S)
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.160058
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:35) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(vl>=100):
	print(S)
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:39:37) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(vl>=100):
	print(S)
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.13577
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:37) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(vl>=100):
	print(S)
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:39:52) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(vl>=100):
	print(S)
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.18214
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:41:54) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
ms=t/S
if(ms>=100):
	print(S)
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:42:03) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
ms=t/S
if(ms>=100):
	print(S)
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.13296
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
OK
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:42:24) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)

if(S>=100):
	print(S)
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:43:01) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(S)
	
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:43:12) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(S)
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:43:14) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(S)
	print("ACIMA")
else:
	print("OK")
-- EXECUTION TIME:
0.163334
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:43:14) 
-- CODE:
p1=int(input("posicao inicial:"))
vl=int(input("velocidade:"))
t=int(input("tempo:"))
limite = 100
S= p1+(vl*t)
if(S>=100):
	print(S)
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
